--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>C3-PWA</title>
+    <title>C3-PAWM</title>
 
     <base href="/" />
 
